# esi-projeto-final

./: .gitignore  build.sh
.github/workflows/: python-app.yml
api/: app.py  model_service.py  pyproject.toml
data/: pipeline.py  pyproject.toml
model/: cnnhypermodel.py  pipeline.py  pyproject.toml
