[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "pedrogcg",email = "pedrogcgds@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "Flask (<=3.1.1)",
    "tensorflow (<=2.19.0)",
    "numpy (<=2.1.3)",
    "matplotlib (<=3.10.3)",
    "scikit-learn (<=1.7.1)",
    "gunicorn"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
