[project]
name = "data"
version = "0.1.0"
description = "A data pipeline to download and generate a dataset for a bird classification image machine learning model"
authors = [
    {name = "pedrogcg",email = "pedrogcgds@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.12" 
dependencies = [
"kagglehub (<=0.3.12)",
"tensorflow (<=2.19.0)",
"matplotlib (<=3.10.3)",
"numpy (<=2.1.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
