[project]
name = "model"
version = "0.1.0"
description = "A pipeline to train and save a machine learning model to classificate bird images"
authors = [
    {name = "pedrogcg",email = "pedrogcgds@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.12" 
dependencies = [
    "tensorflow (<=2.19)",
    "keras-tuner (<=1.4.7)",
    "scikit-learn (<=1.7.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
